--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling==1.26.3", "hatch-vcs"]
+requires = ["hatchling>=1.26.3", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
@@ -20,18 +20,21 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Topic :: Games/Entertainment :: Board Games",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
   "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 dependencies = [
-  "torch",
-  "torchvision", 
-  "numpy",
-  "matplotlib",
-  "Pillow",
-  "pandas",
-  "requests"
+  "torch>=2.0.0",
+  "torchvision>=0.15.0",
+  "numpy>=1.24.0",
+  "matplotlib>=3.7.0",
+  "Pillow>=10.0.0",
+  "pandas>=2.0.0",
+  "requests>=2.28.0"
 ]
 dynamic = ["version"]
 
@@ -41,12 +44,8 @@ Repository = "https://github.com/mdicio/chessimg2pos"
 Issues = "https://github.com/mdicio/chessimg2pos/issues"
 
 [tool.hatch.version]
-path = "src/chessimg2pos/__init__.py"
+path = "src/chessimg2pos/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/chessimg2pos"]
 
-[tool.uv.workspace]
-members = [
-    "chess2imgpos",
-]
