--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-torch
-pillow
-matplotlib
-pandas
-numpy
+torch>=2.6.0
+torchvision>=0.21.0
+pillow>=11.1.0
+matplotlib>=3.10.0
+pandas>=2.2.3
+numpy>=2.2.3
+requests>=2.32.3
